INFT-3107 - label message fixed on iphones

--- a/sass/_scss/infopaginas.scss
+++ b/sass/_scss/infopaginas.scss
@@ -3819,6 +3819,10 @@ a.tag {
     display: none;
   }
 
+  label {
+    z-index: 1;
+  }
+
   .language-title {
     margin-bottom: 10px;
   }
